Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-80996

Large debug messages are not printed

XMLWordPrintable

    • Windows
    • a049325cc708b483ed1aadc6589419f4d74b19f3 (qt/qtbase/5.14)

      OutputDebugMessage seems to have some limit on message size (at least 32k string is ignored) and larger messages seem to be ignored by it. That can create some confusion and make debugging harder as you don't know if a certain path was not taken or if the message was simply ignored.

      Qt could truncate long messages passed to it so at least something is printed.

        For Gerrit Dashboard: QTBUG-80996
        # Subject Branch Project Status CR V

            owolff Oliver Wolff
            poikelin Joni Poikelin
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes